--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@react-google-maps/api": "^2.19.3",
     "@tinymce/tinymce-react": "^5.1.1",
     "axios": "^1.7.3",
     "react": "^18.3.1",
